bk_ida/gccida/g3/ix86_emit_save_regs_using_mov
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_emit_save_regs_using_mov/src/i386.c:4651:21: error: use of undeclared identifier 'machine_mode'
v8 = gen_rtx_REG( ( machine_mode)v7, v4); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_emit_save_regs_using_mov/src/i386.c:4653:22: error: use of undeclared identifier 'machine_mode'
v10 = gen_rtx_MEM( ( machine_mode)v9, pointer); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_emit_save_regs_using_mov/src/i386.c:4654:32: error: use of undeclared identifier 'machine_mode'
v11 = adjust_address_1( v10, ( machine_mode)v9, offset, 1, 1); 
                               ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/ix86_emit_save_regs_using_mov/src/obj/i386.o] Error 1
